src/test/ui-fulldeps/invalid-punct-ident-1.stderr
error: proc macro panicked
  --> $DIR/invalid-punct-ident-1.rs:6:1
   |
LL | invalid_punct!(); //~ ERROR proc macro panicked
   | ^^^^^^^^^^^^^^^^^
   |
   = help: message: unsupported character `'`'`

error: aborting due to previous error

